# combinacions3

./: CMakeLists.txt  combination.c  combination.h  main.c  operaciones.c  operaciones.h  paralleling.c  paralleling.h
